--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
 
     </div>
     <div class="projects" id="projects">
+        <h2 class="header-text" style="align-self: center;"> Experience </h2>
+        <div> 
+            <div class="project">
+                <img src="./images/code.png" width="50px" height="50px" style="align-self:flex-start" >
+                <h3 class="header-text" style="font-size:24px; align-self:flex-start; margin:0;"> ASELSAN, Software Engineering Internship (Summer 2025) </h3>
+                <h4 class="mini-text" style="font-size:18px">In my internship, I focused on developing a software solution for visualizing complex company data and analyzing relationships within that data using graph algorithms. The primary aim of my project was to create an interactive interface that allows users to easily explore and understand connections among various data entities. </h4>
+                <h4 class="mini-text" style="font-size:16px; align-self:flex-start; margin-top:5px;"> <b>Techstack:</b> Unity, C#, Vuforia, ZBrush</h4>
+            </div>
+        </div>
+    </div>
+    <div class="projects" id="projects">
         <h2 class="header-text" style="align-self: center;"> Projects </h2>
         <h4 class="mini-text" style="padding: 20px"> Here are some of my projects that I have developed. </h4>
         <div class="projects-grid">
@@ -125,7 +136,7 @@
        
     </div>
     <div class="models" id="models">
-        <h2 class="header-text" style="align-self: center;"> 3D Models </h2>
+        <h2 class="header-text" style="align-self: center;"> 3D Design </h2>
         <h4 class="mini-text" style="padding: 20px"> I have created some 3D models and scenes using Unreal Engine & ZBrush. You can find them on my <b><a href="https://www.artstation.com/berkatov" target="_blank" class="project-href" style="text-decoration: underline;">Artstation</a></b> profile. </h4>
         <div class="models-grid">
             <div class="model">
