--- a/index.html
+++ b/index.html
@@ -1,179 +1,114 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Berkay Emre Keskin - Portfolio</title>
     <link rel="stylesheet" href="./css/styles.css">
     <script type="importmap">
     {
         "imports": {
-        "three": "https://unpkg.com/three/build/three.module.js",
-        "three/addons/": "https://unpkg.com/three/examples/jsm/"
+            "three": "https://unpkg.com/three/build/three.module.js",
+            "three/addons/": "https://unpkg.com/three/examples/jsm/"
         }
     }
     </script>
 </head>
+
 <body>
-    <div class="navbar">
-        <div class="navbar-left">
-            <h2 class="title">berkay emre keskin</h2>
-            <div class="navbar-routes-container">
-                    <a href="#home" class="navbar-href" >home</a>
-                    <a href="#about" class="navbar-href">about</a>
-                    <a href="#projects" class="navbar-href">projects</a>
-                    <a href="#models" class="navbar-href">3D</a>
-            </div>
-        </div>
-        <div class="navbar-right">
-            <a href="https://github.com/berkayemrekeskin">
-                <img src="./images/icons8-github-logo-480.png" width="30px" height="30px">
-            </a>
-            <a href="https://www.linkedin.com/in/berkayemrekeskin/">
-                <img src="./images/icons8-linkedin-logo-500.png" width="30px" height="30px">
-            </a>
-            <a href="https://www.artstation.com/berkatov">
-                <img src="./images/artstation.png" width="30px" height="30px">
-            </a>
-            <a href="mailto:berkayemrekeskin@gmail.com">
-                <img src="./images/icons8-gmail-logo-500.png" width="30px" height="30px">
-            </a>
-        </div>
-    </div>
-    <div class="home" id="home">
-        <div style="padding: 20px;" id="canvas">
-        </div>
-        <div class="welcome">
-            <h1 style="margin: 5px; font-weight:600; font-size:48px; "> Hi! I am Berkay. </h1>
-            <h3 style="margin: 5px; color:grey; font-weight:600; font-size:24px; "> Junior Computer Engineering Student </h3>
-            <h4  class="mini-text" style="width: 500px; margin: 5px;"> I'm a <b>junior computer engineering student</b> at <b>Istanbul Technical University</b>.
-            I'm curious about machine learning and it's applications in the modern world. Currently, looking for some internships to enhance my teamwork and coding skills.</h4>
-        </div>
-    </div>
-    <div class="about-me" id="about">
-        <h2 class="header-text"> About Me </h2>
-        <h4 class="mini-text"> Obsessed with playing football, loves to travel, interested in machine learning, cinephile candidate, kinda 3d designer (%20)...</h4>
-        <div class="about-me-button-grid"> 
-            <button class="button-general">
-               <a href="./docs/Berkay Emre Keskin.pdf" download="Berkay Emre Keskin.pdf" class="project-href">
-                    Download CV 
-                </a>
-            </button>
-            <button class="button-general"> 
-                <a href="mailto:berkayemrekeskin@gmail.com" class="project-href">
-                    Contact Me 
-                </a>
-            </button>
+    <!-- Theme Toggle -->
+    <button class="theme-toggle" id="themeToggle" aria-label="Toggle dark/light mode">
+        <span class="theme-icon">☀️</span>
+    </button>
+
+    <!-- Main Container -->
+    <div class="main-container">
+        <!-- Dragon Canvas -->
+        <div id="canvas-container">
+            <canvas id="dragonCanvas"></canvas>
         </div>
 
-    </div>
-    <div class="projects" id="projects">
-        <h2 class="header-text" style="align-self: center;"> Experience </h2>
-        <div> 
-            <div class="project">
-                <img src="./images/code.png" width="50px" height="50px" style="align-self:flex-start" >
-                <h3 class="header-text" style="font-size:24px; align-self:flex-start; margin:0;"> ASELSAN, Software Engineering Internship (Summer 2025) </h3>
-                <h4 class="mini-text" style="font-size:18px">In my internship, I focused on developing a software solution for visualizing complex company data and analyzing relationships within that data using graph algorithms. The primary aim of my project was to create an interactive interface that allows users to easily explore and understand connections among various data entities. </h4>
-                <h4 class="mini-text" style="font-size:16px; align-self:flex-start; margin-top:5px;"> <b>Techstack:</b> Unity, C#, Vuforia, ZBrush</h4>
+        <!-- Orbital Rings (Solar System Effect) -->
+        <div class="orbital-system">
+            <!-- Orbit Ring 1 -->
+            <div class="orbit-ring orbit-1">
+                <div class="orbit-particle particle-1"></div>
             </div>
-        </div>
-    </div>
-    <div class="projects" id="projects">
-        <h2 class="header-text" style="align-self: center;"> Projects </h2>
-        <h4 class="mini-text" style="padding: 20px"> Here are some of my projects that I have developed. </h4>
-        <div class="projects-grid">
-            <a href="https://www.teknofest.org/tr/" target="_blank" class="project-href" > 
-                <div class="project">
-                    <img src="./images/code.png" width="50px" height="50px" style="align-self:flex-start" >
-                    <h3 class="header-text" style="font-size:24px; align-self:flex-start; margin:0;"> AtardamAR </h3>
-                    <h4 class="mini-text" style="font-size:18px"> We developed AtardamAR, an augmented reality project aimed at enhancing medical education. Our project earned fourth place in the Teknofest Education Technologies Competition. </h4>
-                    <h4 class="mini-text" style="font-size:16px; align-self:flex-start; margin-top:5px;"> <b>Techstack:</b> Unity, C#, Vuforia, ZBrush</h4>
-                </div>
-            </a>
-            <a href="https://github.com/berkayemrekeskin/Footy" target="_blank" class="project-href" > 
-                <div class="project">
-                    <img src="./images/code.png" width="50px" height="50px" style="align-self:flex-start" >
-                    <h3 class="header-text" style="font-size:24px; align-self:flex-start; margin:0;">  Footy </h3>
-                    <h4 class="mini-text"> I have created a full-stack web application called Footy. Footy's main idea is to help the amateur football players to enhance their skills by inspecting their training and match progresses. </h4>
-                    <h4 class="mini-text" style="font-size:16px; align-self:flex-start; margin-top:5px;"> <b>Techstack:</b> Node.js, Express.js, React.js, MongoDB</h4>
-                </div>
-            </a>
-            <a href="https://github.com/berkayemrekeskin/PomStudy" target="_blank" class="project-href" > 
-                <div class="project">
-                    <img src="./images/code.png" width="50px" height="50px" style="align-self:flex-start" >
-                    <h3 class="header-text" style="font-size:24px; align-self:flex-start; margin:0;">  PomStudy </h3>
-                    <h4 class="mini-text"> PomStudy is a productivity web application that helps high school students manage their time and compete & chat with their friends using the pomodoro technique.  </h4>
-                    <h4 class="mini-text" style="font-size:16px; align-self:flex-start; margin-top:5px;"> <b>Techstack:</b> React.js, Firebase, Firestore </h4>
-                </div>
-            </a>
-            <a href="https://github.com/berkayemrekeskin/MoviMovi" target="_blank" class="project-href" > 
-                <div class="project">
-                    <img src="./images/code.png" width="50px" height="50px" style="align-self:flex-start" >
-                    <h3 class="header-text" style="font-size:24px; align-self:flex-start; margin:0;">  MoviMovi </h3>
-                    <h4 class="mini-text" style="font-size:16px">MoviMovi is a movie recommendation and review website where users can search for movies or genres, add movies to their watchlist, provide reviews and ratings, and connect with friends to see their watchlists and reviews. </h4>
-                    <h4 class="mini-text" style="font-size:16px; align-self:flex-start; margin-top:5px;"> <b>Techstack:</b> Python, Flask, MySQL, HTML, CSS, Javascript</h4>
-                </div>
-            </a>
-            <a href="https://ahmetbahacepni.itch.io/agent152" target="_blank" class="project-href" > 
-                <div class="project">
-                    <img src="./images/code.png" width="50px" height="50px" style="align-self:flex-start" >
-                    <h3 class="header-text" style="font-size:24px; align-self:flex-start; margin:0;">  Agent 152 </h3>
-                    <h4 class="mini-text"> A 2D platform game that we have developed with my team for a game jam.</h4>
-                    <h4 class="mini-text" style="font-size:16px; align-self:flex-start; margin-top:5px;"> <b>Techstack:</b> Unity, C#, Photoshop</h4>
-                </div>
-            </a>
-            <a href="https://github.com/berkayemrekeskin/Recipe-Generator" target="_blank" class="project-href" > 
-                <div class="project">
-                    <img src="./images/code.png" width="50px" height="50px" style="align-self:flex-start" >
-                    <h3 class="header-text" style="font-size:24px; align-self:flex-start; margin:0;">  Recipe Generator </h3>
-                    <h4 class="mini-text"> Recipe Generator is a web application that uses Ollama and Llama 3.2 to generate personalized recipes. </h4>
-                    <h4 class="mini-text" style="font-size:16px; align-self:flex-start; margin-top:5px;"> <b>Techstack:</b> Python, Flask, Ollama, HTML, CSS, MySQL</h4>
-                </div>
-            </a>
-        </div>
-        <button class="button-general"> 
-            <a href="https://github.com/berkayemrekeskin" target="_blank" class="project-href" >
-                Other Projects on Github 
-            </a>
-        </button>
-       
-    </div>
-    <div class="models" id="models">
-        <h2 class="header-text" style="align-self: center;"> 3D Design </h2>
-        <h4 class="mini-text" style="padding: 20px"> I have created some 3D models and scenes using Unreal Engine & ZBrush. You can find them on my <b><a href="https://www.artstation.com/berkatov" target="_blank" class="project-href" style="text-decoration: underline;">Artstation</a></b> profile. </h4>
-        <div class="models-grid">
-            <div class="model">
-                <iframe width="560" height="315" style="border:0; width:100%; height:100%;"
-                    src="https://www.youtube.com/embed/JXaOlN4DR8Y">
-                </iframe> 
-            </div>
-            <div class="model">
-                <iframe width="560" height="315" style="border:0; width:100%; height:100%;"
-                    src="https://www.youtube.com/embed/QTE5J5VAel0">
-                </iframe> 
-            </div>
-            <div class="model">
-                <iframe width="560" height="315" style="border:0; width:100%; height:100%;"
-                    src="https://www.youtube.com/embed/Awlkbp0p3hE">
-                </iframe> 
-            </div>
-            <div class="model">
-                <iframe width="560" height="315" style="border:0; width:100%; height:100%;"
-                    src="https://www.youtube.com/embed/0P8twMS84ys">
-                </iframe> 
-            </div>
-            <div class="model">
-                <iframe width="560" height="315" style="border:0; width:100%; height:100%;"
-                    src="https://www.youtube.com/embed/svPzcd-_Y0o">
-                </iframe> 
-            </div>
-            <div class="model">
-                <iframe width="560" height="315" style="border:0; width:100%; height:100%;"
-                    src="https://www.youtube.com/embed/uIR5jCdF-Hk">
-                </iframe> 
-            </div>
-        </div>
-    </div>
-    <div class="footer">
-        <h4 class="mini-text"> © 2025 Berkay Emre Keskin. All rights reserved. </h4>
-    </div>
-    <script type="module" src="./scripts/main.js"></script>
 
+            <!-- Orbit Ring 2 -->
+            <div class="orbit-ring orbit-2">
+                <div class="orbit-particle particle-2"></div>
+            </div>
+
+            <!-- Orbit Ring 3 -->
+            <div class="orbit-ring orbit-3">
+                <div class="orbit-particle particle-3"></div>
+            </div>
+        </div>
+
+        <!-- Circular Navigation -->
+        <div class="circular-nav">
+            <!-- Navigation Items positioned in a circle -->
+            <a href="experience.html" class="nav-item" style="--angle: 0deg;">
+                <div class="nav-box">
+                    <span class="nav-icon">💼</span>
+                    <span class="nav-label">Experience</span>
+                </div>
+            </a>
+
+            <a href="projects.html" class="nav-item" style="--angle: 51.43deg;">
+                <div class="nav-box">
+                    <span class="nav-icon">🚀</span>
+                    <span class="nav-label">Projects</span>
+                </div>
+            </a>
+
+            <a href="youtube.html" class="nav-item" style="--angle: 102.86deg;">
+                <div class="nav-box">
+                    <span class="nav-icon">📺</span>
+                    <span class="nav-label">YouTube</span>
+                </div>
+            </a>
+
+            <a href="https://www.artstation.com/berkatov" target="_blank" class="nav-item" style="--angle: 154.29deg;">
+                <div class="nav-box">
+                    <span class="nav-icon">🎨</span>
+                    <span class="nav-label">ArtStation</span>
+                </div>
+            </a>
+
+            <a href="https://www.linkedin.com/in/berkayemrekeskin/" target="_blank" class="nav-item"
+                style="--angle: 205.71deg;">
+                <div class="nav-box">
+                    <span class="nav-icon">💼</span>
+                    <span class="nav-label">LinkedIn</span>
+                </div>
+            </a>
+
+            <a href="https://github.com/berkayemrekeskin" target="_blank" class="nav-item" style="--angle: 257.14deg;">
+                <div class="nav-box">
+                    <span class="nav-icon">💻</span>
+                    <span class="nav-label">GitHub</span>
+                </div>
+            </a>
+
+            <a href="mailto:berkayemrekeskin@gmail.com" class="nav-item" style="--angle: 308.57deg;">
+                <div class="nav-box">
+                    <span class="nav-icon">✉️</span>
+                    <span class="nav-label">Mail</span>
+                </div>
+            </a>
+        </div>
+
+        <!-- Name Display - Fixed Footer -->
+        <div class="name-display">
+            <h1>Berkay Emre Keskin</h1>
+            <p>Senior Computer Engineering Student in Istanbul Technical University</p>
+        </div>
+
+        <script type="module" src="./scripts/main.js"></script>
+        <script src="./scripts/theme.js"></script>
 </body>
+
+</html>
