new project added

--- a/projects.html
+++ b/projects.html
@@ -38,6 +38,22 @@
                 </div>
             </a>
 
+            <a href="https://github.com/berkayemrekeskin/ituBNB" target="_blank" class="item-card-link">
+                <div class="item-card">
+                    <h2>ituBNB</h2>
+                    <p>
+                        ituBNB is a comprehensive accommodation booking platform that allows users to search, book, and
+                        manage property rentals. The platform features an intelligent AI-powered search system that
+                        understands natural language queries, making it easy for users to find their perfect
+                        accommodation.
+                    </p>
+                    <p class="tech-stack">
+                        <strong>Technologies:</strong> React.js, Express.js, MongoDB Atlas, Python (Flask)
+                    </p>
+
+                </div>
+            </a>
+
             <a href="https://github.com/berkayemrekeskin/Footy" target="_blank" class="item-card-link">
                 <div class="item-card">
                     <h2>Footy</h2>
@@ -65,6 +81,8 @@
 
                 </div>
             </a>
+
+
 
             <a href="https://github.com/berkayemrekeskin/MoviMovi" target="_blank" class="item-card-link">
                 <div class="item-card">
