--- a/index.html
+++ b/index.html
@@ -57,21 +57,28 @@
                 </div>
             </a>
 
-            <a href="projects.html" class="nav-item" style="--angle: 51.43deg;">
+            <a href="projects.html" class="nav-item" style="--angle: 45deg;">
                 <div class="nav-box">
                     <span class="nav-icon">🚀</span>
                     <span class="nav-label">Projects</span>
                 </div>
             </a>
 
-            <a href="youtube.html" class="nav-item" style="--angle: 102.86deg;">
+            <a href="docs/Berkay%20Emre%20Keskin.pdf" target="_blank" class="nav-item" style="--angle: 90deg;">
+                <div class="nav-box">
+                    <span class="nav-icon">📄</span>
+                    <span class="nav-label">CV</span>
+                </div>
+            </a>
+
+            <a href="youtube.html" class="nav-item" style="--angle: 135deg;">
                 <div class="nav-box">
                     <span class="nav-icon">📺</span>
                     <span class="nav-label">YouTube</span>
                 </div>
             </a>
 
-            <a href="https://www.artstation.com/berkatov" target="_blank" class="nav-item" style="--angle: 154.29deg;">
+            <a href="https://www.artstation.com/berkatov" target="_blank" class="nav-item" style="--angle: 180deg;">
                 <div class="nav-box">
                     <span class="nav-icon">🎨</span>
                     <span class="nav-label">ArtStation</span>
@@ -79,21 +86,21 @@
             </a>
 
             <a href="https://www.linkedin.com/in/berkayemrekeskin/" target="_blank" class="nav-item"
-                style="--angle: 205.71deg;">
+                style="--angle: 225deg;">
                 <div class="nav-box">
                     <span class="nav-icon">💼</span>
                     <span class="nav-label">LinkedIn</span>
                 </div>
             </a>
 
-            <a href="https://github.com/berkayemrekeskin" target="_blank" class="nav-item" style="--angle: 257.14deg;">
+            <a href="https://github.com/berkayemrekeskin" target="_blank" class="nav-item" style="--angle: 270deg;">
                 <div class="nav-box">
                     <span class="nav-icon">💻</span>
                     <span class="nav-label">GitHub</span>
                 </div>
             </a>
 
-            <a href="mailto:berkayemrekeskin@gmail.com" class="nav-item" style="--angle: 308.57deg;">
+            <a href="mailto:berkayemrekeskin@gmail.com" class="nav-item" style="--angle: 315deg;">
                 <div class="nav-box">
                     <span class="nav-icon">✉️</span>
                     <span class="nav-label">Mail</span>
